plugins {
  id 'java'
  id 'application'
  id 'jacoco'
  id 'org.graalvm.buildtools.native' version '1.1.0'
}

group = 'org.mnm'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(25)
  }
}

repositories {
  mavenCentral()
}

ext {
  junitVersion = '6.0.3'
  sqliteJdbcVersion = '3.53.0.0'
}

def os = org.gradle.internal.os.OperatingSystem.current()

dependencies {
  implementation 'org.slf4j:slf4j-api:2.0.17'
  implementation 'ch.qos.logback:logback-classic:1.5.32'
  implementation 'com.google.code.gson:gson:2.14.0'
  implementation 'net.openhft:zero-allocation-hashing:2026.0'
  // Graal partial support for previous version https://github.com/oracle/graalvm-reachability-metadata/pull/121/changes
  implementation('com.github.luben:zstd-jni:1.5.7-7')

  implementation("org.xerial:sqlite-jdbc:${sqliteJdbcVersion}:without-natives")
  if (os.isLinux()) implementation("org.xerial:sqlite-jdbc:${sqliteJdbcVersion}:natives-linux")
  if (os.isWindows()) implementation("org.xerial:sqlite-jdbc:${sqliteJdbcVersion}:natives-windows")


  testImplementation platform("org.junit:junit-bom:$junitVersion")
  testImplementation 'org.junit.jupiter:junit-jupiter'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

  testImplementation "org.assertj:assertj-core:3.27.7"
  testImplementation "org.mockito:mockito-core:5.20.0"
  testImplementation "org.mockito:mockito-junit-jupiter:5.20.0"
  testImplementation "org.wiremock:wiremock:3.13.2"
}

jacoco {
  toolVersion = "0.8.15"
}

jacocoTestReport {
  dependsOn test
  reports {
    xml.required = false
    csv.required = false
  }
}

tasks.named('test') {
  useJUnitPlatform()
  beforeTest { descriptor ->
    def className = descriptor.className.tokenize('.').last()
    println("Running test: ${className}.${descriptor.name}")
  }
  if (project.hasProperty('agent')) {
    jvmArgs("-agentlib:native-image-agent=config-output-dir=./config-dir/,config-write-period-secs=300,config-write-initial-delay-secs=5")
  }
}

jar {
  manifest {
    attributes 'Main-Class': application.mainClass
  }
}

/**
 * Can't add static heap limit (-Xmxm,-R:MaxHeapSize) below max_size of file
 * because in-memory file check loads the file in the heap.
 */
application {
  applicationName = 'sweet'
  applicationDefaultJvmArgs = [
    '--enable-native-access=ALL-UNNAMED',
    '-Xmx2304m'
  ]
  executableDir = ''
  mainClass = 'org.mnm.MainClazz'
}

graalvmNative {
  binaries {
    named("main") {
      imageName = application.applicationName

      buildArgs.addAll(
        '--enable-native-access=ALL-UNNAMED',
        '--enable-url-protocols=https',
        '--gc=serial',
        '--initialize-at-run-time=sun.java2d.d3d.D3DRenderQueue',
        '--initialize-at-run-time=sun.java2d.d3d.D3DGraphicsDevice',
        '--initialize-at-run-time=sun.java2d.d3d.D3DSurfaceData',
        '--initialize-at-run-time=sun.java2d.d3d',
        '--initialize-at-run-time=sun.awt.FontConfiguration',
        '--initialize-at-run-time=sun.awt.Win32FontManager',
        '--initialize-at-run-time=sun.font.SunFontManager',
        '--initialize-at-run-time=sun.font.FontManagerFactory',
        '--initialize-at-run-time=sun.font.FontDesignMetrics',
        '--initialize-at-run-time=sun.font.PlatformFontInfo',
        '--initialize-at-build-time=org.mnm.config.Environment',
        '-Dsweet_native=true',
        '-R:MaxHeapSize=2304m'
      )
      resources {
        includedPatterns.addAll('logback.xml', 'version.txt')
      }
    }
  }
}

tasks.register("setVersion") {
  doLast {
    def gitSha = "git rev-parse --short HEAD".execute().text.trim()
    def versionFile = layout.buildDirectory.file("resources/main/version.txt").get().asFile

    def buildVersion = project.findProperty('buildVersion')
    if (buildVersion) {
      versionFile.text = "${buildVersion}\n${gitSha}\n"
    } else {
      versionFile.text = "${project.version}\n${gitSha}\n"
    }
  }
}

tasks.named("classes") {
  dependsOn(tasks.named("setVersion"))
}

tasks.named('run', JavaExec) {
  args 'gui'
  if (project.hasProperty('agent')) {
    jvmArgs("-agentlib:native-image-agent=config-output-dir=./config-dir/,config-write-period-secs=300,config-write-initial-delay-secs=5")
  }
}

if (os.isWindows()) {
  tasks.named('nativeCompile') {
    doLast {
      copy {
        from('src/main/resources/distribution')
        into(layout.buildDirectory.dir('native/nativeCompile'))
      }
    }
  }
}
